--- a/config.h.in
+++ b/config.h.in
@@ -5,3 +5,6 @@
 #ifndef SCRIPT_DIR
 #define SCRIPT_DIR "@CMAKE_INSTALL_PREFIX@@ENGINE_DIR@/@SCRIPT_SUBDIR@"
 #endif
+
+#cmakedefine LIBPY_LINK_HACK @LIBPY_LINK_HACK@
+#cmakedefine LIBPY_SONAME "@LIBPY_SONAME@"
