--- a/config.h.in
+++ b/config.h.in
@@ -8,3 +8,4 @@
 
 #cmakedefine LIBPY_LINK_HACK @LIBPY_LINK_HACK@
 #cmakedefine LIBPY_SONAME "@LIBPY_SONAME@"
+#cmakedefine PYTHON_DICT_GC_HACK @PYTHON_DICT_GC_HACK@
