Add util functions for wrapping external lib objects
...so that we can do the rest of the wrapping from the Cython side.
Also, wrap the cairo context on the Cython side.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 project(pyemerald)
 
-add_library(pyemerald MODULE pyemerald.c _pyemerald.c)
+add_library(pyemerald MODULE pyemerald.c _pyemerald.c wraputils.c)
 
 include(GNUInstallDirs)
 
